--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
